Second Commit: added chain-level files

--- a/SAD-SCB - cleaning and organizing.ipynb
+++ b/SAD-SCB - cleaning and organizing.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:06:30.891762Z",
-     "start_time": "2021-06-16T19:06:30.431520Z"
+     "end_time": "2021-06-17T00:46:48.836699Z",
+     "start_time": "2021-06-17T00:46:47.943152Z"
     }
    },
    "outputs": [],
@@ -1185,8 +1185,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:08:48.189039Z",
-     "start_time": "2021-06-16T19:06:44.350588Z"
+     "end_time": "2021-06-17T00:48:53.968710Z",
+     "start_time": "2021-06-17T00:47:05.055186Z"
     }
    },
    "outputs": [],
@@ -1200,8 +1200,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:11:47.563386Z",
-     "start_time": "2021-06-16T19:08:48.220115Z"
+     "end_time": "2021-06-17T00:51:42.678805Z",
+     "start_time": "2021-06-17T00:48:53.968710Z"
     }
    },
    "outputs": [],
@@ -1219,8 +1219,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:11:47.717116Z",
-     "start_time": "2021-06-16T19:11:47.585534Z"
+     "end_time": "2021-06-17T00:51:42.835072Z",
+     "start_time": "2021-06-17T00:51:42.694434Z"
     }
    },
    "outputs": [
@@ -1262,8 +1262,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:15:40.431655Z",
-     "start_time": "2021-06-16T19:11:47.717116Z"
+     "end_time": "2021-06-17T00:54:58.587233Z",
+     "start_time": "2021-06-17T00:51:42.913208Z"
     }
    },
    "outputs": [],
@@ -1856,11 +1856,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T18:59:52.095924Z",
-     "start_time": "2021-06-16T18:55:29.718888Z"
+     "end_time": "2021-06-17T01:04:46.798553Z",
+     "start_time": "2021-06-17T01:00:54.292881Z"
     }
    },
    "outputs": [],
@@ -1897,11 +1897,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T18:59:52.349496Z",
-     "start_time": "2021-06-16T18:59:52.136033Z"
+     "end_time": "2021-06-17T01:04:46.939195Z",
+     "start_time": "2021-06-17T01:04:46.814192Z"
     },
     "scrolled": true
    },
@@ -1937,11 +1937,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:00:47.185429Z",
-     "start_time": "2021-06-16T19:00:47.130280Z"
+     "end_time": "2021-06-17T01:04:47.032953Z",
+     "start_time": "2021-06-17T01:04:46.939195Z"
     }
    },
    "outputs": [],
@@ -1952,11 +1952,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:00:47.524656Z",
-     "start_time": "2021-06-16T19:00:47.496547Z"
+     "end_time": "2021-06-17T01:04:47.064207Z",
+     "start_time": "2021-06-17T01:04:47.032953Z"
     },
     "scrolled": true
    },
@@ -1979,7 +1979,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,11 +1990,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:00:47.831148Z",
-     "start_time": "2021-06-16T19:00:47.823128Z"
+     "end_time": "2021-06-17T01:04:47.079834Z",
+     "start_time": "2021-06-17T01:04:47.064207Z"
     }
    },
    "outputs": [],
@@ -2017,11 +2017,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:00:48.801314Z",
-     "start_time": "2021-06-16T19:00:48.417333Z"
+     "end_time": "2021-06-17T01:04:49.051983Z",
+     "start_time": "2021-06-17T01:04:47.079834Z"
     }
    },
    "outputs": [],
@@ -2086,11 +2086,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:00:49.593837Z",
-     "start_time": "2021-06-16T19:00:49.565762Z"
+     "end_time": "2021-06-17T01:04:49.083235Z",
+     "start_time": "2021-06-17T01:04:49.051983Z"
     }
    },
    "outputs": [
@@ -2101,19 +2101,19 @@
       "File:\n",
       "Unavailable fulfillment data: 1 out of 629\n",
       "Zero revenues: 0 out of 629\n",
-      "Unavailable op days data: 629 out of 629\n",
-      "Total to be removed: 629 out of 629\n",
+      "Unavailable op days data: 0 out of 629\n",
+      "Total to be removed: 1 out of 629\n",
       "File:\n",
       "Unavailable fulfillment data: 1 out of 625\n",
       "Zero revenues: 0 out of 625\n",
-      "Unavailable op days data: 625 out of 625\n",
-      "Total to be removed: 625 out of 625\n",
+      "Unavailable op days data: 0 out of 625\n",
+      "Total to be removed: 1 out of 625\n",
       "File:\n",
       "Unavailable fulfillment data: 0 out of 602\n",
       "Zero revenues: 0 out of 602\n",
-      "Unavailable op days data: 602 out of 602\n",
-      "Total to be removed: 602 out of 602\n",
-      "Total to be removed from all files: 1856 out of 1856\n"
+      "Unavailable op days data: 0 out of 602\n",
+      "Total to be removed: 0 out of 602\n",
+      "Total to be removed from all files: 2 out of 1856\n"
      ]
     }
    ],
@@ -2145,11 +2145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:00:49.947528Z",
-     "start_time": "2021-06-16T19:00:49.934313Z"
+     "end_time": "2021-06-17T01:07:46.343317Z",
+     "start_time": "2021-06-17T01:07:46.333288Z"
     }
    },
    "outputs": [],
@@ -2162,11 +2162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:00:50.746166Z",
-     "start_time": "2021-06-16T19:00:50.742127Z"
+     "end_time": "2021-06-17T01:07:47.618219Z",
+     "start_time": "2021-06-17T01:07:47.614209Z"
     }
    },
    "outputs": [
@@ -2174,7 +2174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 25) (0, 25) (0, 25)\n"
+      "(628, 25) (624, 25) (602, 25)\n"
      ]
     }
    ],
@@ -2193,11 +2193,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:00:51.698798Z",
-     "start_time": "2021-06-16T19:00:51.693806Z"
+     "end_time": "2021-06-17T01:07:52.648918Z",
+     "start_time": "2021-06-17T01:07:52.645881Z"
     }
    },
    "outputs": [],
@@ -2207,11 +2207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:00:53.310143Z",
-     "start_time": "2021-06-16T19:00:52.598843Z"
+     "end_time": "2021-06-17T01:07:53.660947Z",
+     "start_time": "2021-06-17T01:07:52.951110Z"
     }
    },
    "outputs": [],
@@ -2225,11 +2225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:01:52.444364Z",
-     "start_time": "2021-06-16T19:01:52.424311Z"
+     "end_time": "2021-06-17T01:07:53.679683Z",
+     "start_time": "2021-06-17T01:07:53.660947Z"
     }
    },
    "outputs": [],
@@ -2251,11 +2251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-16T19:01:53.018580Z",
-     "start_time": "2021-06-16T19:01:53.008063Z"
+     "end_time": "2021-06-17T01:07:54.407866Z",
+     "start_time": "2021-06-17T01:07:54.395834Z"
     }
    },
    "outputs": [],
@@ -2276,11 +2276,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-08T18:59:22.643458Z",
-     "start_time": "2021-06-08T18:59:22.633454Z"
+     "end_time": "2021-06-17T01:07:58.957185Z",
+     "start_time": "2021-06-17T01:07:58.948134Z"
     }
    },
    "outputs": [],
@@ -2289,16 +2289,17 @@
     "\n",
     "for d in data:# renaming cols to work in regressions and give clarifity that CPB_ROE equal no of diff titles exhibited that year\n",
     "    d.rename({'RENDA_ATUALIZADA_JAN20':'RENDA','CPB_ROE':'QTDE_TIT_DIF_EXIB', 'REGISTRO_SALAS':'QTD_SALAS_NUNIQUE'},\n",
-    "             axis=1, inplace=True)"
+    "             axis=1, inplace=True)\n",
+    "    d.drop(['GRUPO_EXIBIDOR'], axis=1,inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-08T18:59:23.379346Z",
-     "start_time": "2021-06-08T18:59:23.304893Z"
+     "end_time": "2021-06-17T01:08:03.427297Z",
+     "start_time": "2021-06-17T01:08:03.356122Z"
     }
    },
    "outputs": [],
@@ -2311,18 +2312,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Dynamic model organizing and cleaning"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Chain-level panel 2018 data"
    ]
@@ -2330,9 +2327,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "scb_trab = pd.read_csv('SCB_2017 a 2019 tratado 2.csv', usecols=['ANO_CINEMATOGRAFICO', 'SEMANA_CINEMATOGRAFICA', \n",
@@ -2344,9 +2339,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# pegando só as sessões da madrugada (que contam para o dia anterior) e depois das 13, quando começam a contar para a cota\n",
@@ -2357,9 +2350,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# transformação dessas colunas em datas\n",
@@ -2373,9 +2364,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# criando coluna para poder fazer o groupby\n",
@@ -2386,9 +2375,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# pegando só sessões regulares e complexos comerciais\n",
@@ -2399,9 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ajustando dias para sessões depois de meia-noite que contam para o \"dia\" anterior\n",
@@ -2429,9 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# computando a quantidade de sessões por dia em uma sala\n",
@@ -2444,9 +2427,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# jogando fora colunas desnecessárias\n",
@@ -2457,9 +2438,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# definindo função de contagem de sessões por dia para complexos e \n",
@@ -2473,9 +2452,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# criando a fração de cumprimento proporcional\n",
@@ -2487,9 +2464,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ordenando os valores por grupo e sessão para podermos depois fazer a soma cumulativa\n",
@@ -2500,9 +2475,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# fazendo a soma cumulativa por grupo que representa a variável de estado para cada grupo\n",
@@ -2515,9 +2488,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# criação de lista de obras passadas por semana no complexo com quantidade de sessões\n",
@@ -2533,9 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# descartando colunas desnecessárias, lembre que filtramos a base por comercial == sim\n",
@@ -2546,9 +2515,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# exportação do Painel\n",
@@ -2559,9 +2526,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# exportação das obras por frequência\n",
@@ -2572,9 +2537,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# reimportação do painel\n",
@@ -2585,9 +2548,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# importando cotas para fazer o merge #\n",
@@ -2603,9 +2564,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# mapeando a obrigação do arquivo da cota para o arquivo SCB\n",
@@ -2636,9 +2595,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dias_max = scb_trab.groupby(['REGISTRO_GRUPO','REGISTRO_SALA','MES_ajustado','DIA_ajustado']).agg({'TIPO_SESSAO':'count'})"
@@ -2647,9 +2604,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2735,9 +2690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# essas células calculam o máximo de punição que uma sala pode sofrer num determinado momento do tempo,\n",
@@ -2755,9 +2708,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# agora somamos o quanto ela já cumpriu com o quanto ela pode cumprir (calculado anteriormente) para aferir o cumprimento\n",
@@ -2778,9 +2729,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "scb_trab.drop(['a cumprir'], axis=1,inplace=True)"
@@ -2789,9 +2738,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# cômputo simplificado da cota faltante para as salas cumprirem\n",
@@ -2803,9 +2750,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# agrupando por obra para obter a ocupação média (esperada) da obra naquela semana\n",
@@ -2818,9 +2763,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# colocando esse dado no painel de filmes semanal de cada complexo\n",
@@ -2833,9 +2776,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# remoção de coluna desnecessária e exportação novamente\n",
@@ -2848,9 +2789,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ficou faltando calcular a frequência para a última semana que não entra nos dados porque no modelo estamos \n",
@@ -2865,9 +2804,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obras_adendo = scb_trab.query(\"ANO_CINEMATOGRAFICO == 2017 & SEMANA_CINEMATOGRAFICA == 51\").groupby(\n",
@@ -2890,9 +2827,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obras_final = pd.concat([obras_adendo, obras_comp])"
@@ -2901,9 +2836,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "obras_final.to_csv('Obras freq.csv', index=False)"
@@ -2912,8 +2845,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "#### Multiplex-level panel 2018 data"
