--- a/IMAGES_and_graphs.ipynb
+++ b/IMAGES_and_graphs.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-13T22:30:11.885231Z",
-     "start_time": "2021-08-13T22:30:09.688457Z"
+     "end_time": "2021-09-15T23:46:58.625711Z",
+     "start_time": "2021-09-15T23:46:55.258421Z"
     }
    },
    "outputs": [],
@@ -18,17 +18,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Matplotlib configs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-11T21:30:18.636696Z",
-     "start_time": "2021-08-11T21:30:18.622660Z"
+     "end_time": "2021-09-15T23:46:58.688737Z",
+     "start_time": "2021-09-15T23:46:58.659625Z"
     }
    },
    "outputs": [],
    "source": [
-    "# função para exportar em pgf para LaTeX\n",
+    "# export to pgf latex\n",
     "\n",
     "import matplotlib\n",
     "\n",
@@ -43,16 +50,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-14T01:23:03.158675Z",
-     "start_time": "2021-03-14T01:23:03.103644Z"
+     "end_time": "2021-09-15T23:25:23.881980Z",
+     "start_time": "2021-09-15T23:25:23.876978Z"
     }
    },
    "outputs": [],
    "source": [
-    "# função para criar figuras com base no tamanho da página do doc LATEX\n",
+    "# restore original params\n",
+    "\n",
+    "matplotlib.use(\"TkAgg\")\n",
+    "\n",
+    "matplotlib.rcParams.update(matplotlib.rcParamsDefault)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-15T22:53:10.506983Z",
+     "start_time": "2021-09-15T22:53:10.500967Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# adjusting size to size of latex page\n",
     "\n",
     "def set_size(width_pt, fraction=1, subplots=(1, 1)):\n",
     "    \"\"\"Set figure dimensions to sit nicely in our document.\n",
@@ -2293,11 +2318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-13T22:33:42.203390Z",
-     "start_time": "2021-08-13T22:30:32.596534Z"
+     "end_time": "2021-09-15T23:52:31.471694Z",
+     "start_time": "2021-09-15T23:47:03.107079Z"
     }
    },
    "outputs": [],
@@ -2307,11 +2332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-13T22:33:42.376151Z",
-     "start_time": "2021-08-13T22:33:42.250327Z"
+     "end_time": "2021-09-15T22:57:39.187652Z",
+     "start_time": "2021-09-15T22:57:39.024726Z"
     }
    },
    "outputs": [
@@ -2335,7 +2360,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2346,11 +2371,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-13T22:36:53.253313Z",
-     "start_time": "2021-08-13T22:33:42.376151Z"
+     "end_time": "2021-09-15T23:00:53.626106Z",
+     "start_time": "2021-09-15T22:57:39.187652Z"
     }
    },
    "outputs": [],
@@ -2360,6 +2385,257 @@
     "# HH:MM format to session start info\n",
     "scb_trab.loc[:,'HORA_SESSAO'] = scb_trab.loc[:,'HORA_SESSAO'].apply(lambda x: datetime.strptime(x, '%H:%M'))\n",
     "scb_trab.loc[:,'HORA_COMECO_SESSAO'] = scb_trab.loc[:,'HORA_SESSAO'].apply(lambda x: x.hour) # getting col with starting hour"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sessions, income and moviegoers per year, normalized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-15T23:54:58.704512Z",
+     "start_time": "2021-09-15T23:53:21.607424Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# used for all\n",
+    "std_dict = {'DATA_SESSAO': 'count', 'PUBLICO':'sum','RENDA_ATUALIZADA_JAN20':'sum'}\n",
+    "\n",
+    "# selecting only comercial reg,, sessions\n",
+    "filt = \"COMERCIAL == 'COMERCIAL' & TIPO_SESSAO == 'SESSÃO REGULAR'\"\n",
+    "\n",
+    "gby = ['ANO_CINEMATOGRAFICO','NACIONALIDADE']\n",
+    "\n",
+    "data_per_year = scb_trab.query(filt).groupby(gby, as_index=False).agg(std_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-15T23:09:34.302785Z",
+     "start_time": "2021-09-15T23:09:34.298789Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['DATA_SESSAO', 'PUBLICO', 'RENDA_ATUALIZADA_JAN20'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_per_year.columns[2:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-15T23:55:31.703193Z",
+     "start_time": "2021-09-15T23:55:31.526165Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for i,r in data_per_year.iterrows():\n",
+    "    for col in data_per_year.columns[2:5]:\n",
+    "        data_per_year.loc[i, f'{col}_NORMALIZADO'] = (\n",
+    "            r[col] / data_per_year.loc[data_per_year.ANO_CINEMATOGRAFICO == r['ANO_CINEMATOGRAFICO'], col].sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-15T23:43:22.157423Z",
+     "start_time": "2021-09-15T23:43:22.144418Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ANO_CINEMATOGRAFICO</th>\n",
+       "      <th>NACIONALIDADE</th>\n",
+       "      <th>DATA_SESSAO</th>\n",
+       "      <th>PUBLICO</th>\n",
+       "      <th>RENDA_ATUALIZADA_JAN20</th>\n",
+       "      <th>DATA_SESSAO_NORMALIZADO</th>\n",
+       "      <th>PUBLICO_NORMALIZADO</th>\n",
+       "      <th>RENDA_ATUALIZADA_JAN20_NORMALIZADO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>BRASILEIRA</td>\n",
+       "      <td>652809</td>\n",
+       "      <td>16753010</td>\n",
+       "      <td>2.601996e+08</td>\n",
+       "      <td>0.158406</td>\n",
+       "      <td>0.095913</td>\n",
+       "      <td>0.088851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>ESTRANGEIRA</td>\n",
+       "      <td>3468291</td>\n",
+       "      <td>157916089</td>\n",
+       "      <td>2.668290e+09</td>\n",
+       "      <td>0.841594</td>\n",
+       "      <td>0.904087</td>\n",
+       "      <td>0.911149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>BRASILEIRA</td>\n",
+       "      <td>680538</td>\n",
+       "      <td>22973332</td>\n",
+       "      <td>2.997384e+08</td>\n",
+       "      <td>0.159662</td>\n",
+       "      <td>0.144535</td>\n",
+       "      <td>0.116873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>ESTRANGEIRA</td>\n",
+       "      <td>3581839</td>\n",
+       "      <td>135972802</td>\n",
+       "      <td>2.264915e+09</td>\n",
+       "      <td>0.840338</td>\n",
+       "      <td>0.855465</td>\n",
+       "      <td>0.883127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>BRASILEIRA</td>\n",
+       "      <td>646276</td>\n",
+       "      <td>22494485</td>\n",
+       "      <td>3.221845e+08</td>\n",
+       "      <td>0.149645</td>\n",
+       "      <td>0.131205</td>\n",
+       "      <td>0.115091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>ESTRANGEIRA</td>\n",
+       "      <td>3672442</td>\n",
+       "      <td>148950436</td>\n",
+       "      <td>2.477213e+09</td>\n",
+       "      <td>0.850355</td>\n",
+       "      <td>0.868795</td>\n",
+       "      <td>0.884909</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ANO_CINEMATOGRAFICO NACIONALIDADE  DATA_SESSAO    PUBLICO  \\\n",
+       "0                 2017    BRASILEIRA       652809   16753010   \n",
+       "1                 2017   ESTRANGEIRA      3468291  157916089   \n",
+       "2                 2018    BRASILEIRA       680538   22973332   \n",
+       "3                 2018   ESTRANGEIRA      3581839  135972802   \n",
+       "4                 2019    BRASILEIRA       646276   22494485   \n",
+       "5                 2019   ESTRANGEIRA      3672442  148950436   \n",
+       "\n",
+       "   RENDA_ATUALIZADA_JAN20  DATA_SESSAO_NORMALIZADO  PUBLICO_NORMALIZADO  \\\n",
+       "0            2.601996e+08                 0.158406             0.095913   \n",
+       "1            2.668290e+09                 0.841594             0.904087   \n",
+       "2            2.997384e+08                 0.159662             0.144535   \n",
+       "3            2.264915e+09                 0.840338             0.855465   \n",
+       "4            3.221845e+08                 0.149645             0.131205   \n",
+       "5            2.477213e+09                 0.850355             0.868795   \n",
+       "\n",
+       "   RENDA_ATUALIZADA_JAN20_NORMALIZADO  \n",
+       "0                            0.088851  \n",
+       "1                            0.911149  \n",
+       "2                            0.116873  \n",
+       "3                            0.883127  \n",
+       "4                            0.115091  \n",
+       "5                            0.884909  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_per_year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-15T23:56:37.839409Z",
+     "start_time": "2021-09-15T23:56:32.577726Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "data_per_year.query('NACIONALIDADE == \"BRASILEIRA\"')\n",
+    "\n",
+    "x = np.arange(3)\n",
+    "width = 0.2\n",
+    "\n",
+    "plt.figure(figsize=(12,4))\n",
+    "\n",
+    "plt.bar(x-0.2, np.round(\n",
+    "    data_per_year.query('NACIONALIDADE == \"BRASILEIRA\" & ANO_CINEMATOGRAFICO == 2017').iloc[:,5:].values.reshape(-1,), 3)*100,\n",
+    "        width)\n",
+    "plt.bar(x, np.round(\n",
+    "    data_per_year.query('NACIONALIDADE == \"BRASILEIRA\" & ANO_CINEMATOGRAFICO == 2018').iloc[:,5:].values.reshape(-1,), 3)*100,\n",
+    "        width)\n",
+    "plt.bar(x+0.2, np.round(\n",
+    "    data_per_year.query('NACIONALIDADE == \"BRASILEIRA\" & ANO_CINEMATOGRAFICO == 2019').iloc[:,5:].values.reshape(-1,), 3)*100,\n",
+    "        width)\n",
+    "plt.xticks(x, ['Brazilian Movie Sessions',\n",
+    "                'Brazilian Movie Ticket Sales', \n",
+    "                'Brazilian Movie Box Office'])\n",
+    "plt.legend(['2017','2018','2019'])\n",
+    "plt.ylabel(\"Percent of Total\")\n",
+    "plt.grid(True)\n",
+    "plt.savefig('brazil_shares.pgf')"
    ]
   },
   {
@@ -6204,7 +6480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
